<resources>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="add_cover_photo">Add Cover Photo</string>
    <string name="cover_photo">Cover Photo</string>
    <string name="name_of_the_workout">Name of the workout</string>
    <string name="title">Title</string>
    <string name="description">Description</string>
    <string name="enter_description">Enter description</string>
    <string name="publish">Publish</string>
    <string name="exercises">Exercises</string>
    <string name="add_daily_plan">Add daily plan</string>
    <string name="kcal_value_text">%d kcal</string>
    <string name="plans">Plans</string>
    <string name="workout_created_successfully">Workout created successfully</string>
    <string name="workout_description_empty">Workout description cannot be empty</string>
    <string name="workout_title_empty">Workout workout title cannot be empty</string>
    <string name="workout_plan_empty">Workout Daily Plan cannot be empty</string>
    <string name="kcal">Kcal</string>
    <string name="calories">Calories</string>
    <string name="calories_empty_text">Calorie should be greater than 0</string>
    <string name="exercise_empty_text">Exercises cannot be empty</string>
    <string name="daily_plan_title_empty">Daily Plan title cannot be empty</string>
    <string name="add_exercise">Add Exercise</string>
    <string name="search">Search</string>
    <string name="set_exercise_details">Set Exercise Details</string>
    <string name="reps">Reps</string>
    <string name="confirm">Confirm</string>
    <string name="sets">Sets</string>


    <plurals name="exercises">
        <item quantity="one">%d exercise</item>
        <item quantity="other">%d exercises</item>
    </plurals>
</resources>
